Issue #3144386 by agami4: Horizontal scroll always visible on the landing page (#1866)

--- a/modules/social_features/social_landing_page/css/social_landing_page.section.hero_small.css
+++ b/modules/social_features/social_landing_page/css/social_landing_page.section.hero_small.css
@@ -1,9 +1,3 @@
-@media (min-width: 1200px) {
-  .paragraph--section .paragraph--hero-small {
-    margin-left: calc(-100vw / 2 + 1200px / 2);
-    margin-right: calc(-100vw / 2 + 1200px / 2);
-  }
-}
 .paragraph--hero-small .hero-small__bgimage-overlay {
   position: absolute;
   top: 0;
